--- a/TravelCatalog/Views/Shared/_Layout.cshtml
+++ b/TravelCatalog/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     <div class="container body-content">
         @RenderBody()
 
-        TEST!
+        TEST!Azure deploy
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
