--- a/TravelCatalog/Views/Shared/_Layout.cshtml
+++ b/TravelCatalog/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
     <div class="container body-content">
         @RenderBody()
 
-        TEST!Azure deploy
+        
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Travel catalog</p>
         </footer>
     </div>
 
