Models for translation added, simple query to the travel service created

--- a/TravelCatalog/Views/Travels/Details.cshtml
+++ b/TravelCatalog/Views/Travels/Details.cshtml
@@ -1,8 +1,11 @@
-﻿@model TravelCatalog.Models.Travel
+﻿@model TravelCatalog.Models.TravelViewModel
 
 Details
 
+<br/>
 @Model.Title
 
 -------------------<br />
 @Model.Description
+-------------------<br />
+@Model.Language
