Renaming of Travelcatalof with TravelAlbum

--- a/TravelAlbum.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/TravelAlbum.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.ExternalLoginConfirmationViewModel
+﻿@model TravelAlbum.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
