--- a/TravelAlbum.Web/Views/Account/VerifyCode.cshtml
+++ b/TravelAlbum.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.VerifyCodeViewModel
+﻿@model TravelAlbum.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
