--- a/TravelAlbum.Web/Views/Manage/ChangePassword.cshtml
+++ b/TravelAlbum.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.ChangePasswordViewModel
+﻿@model TravelAlbum.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
