--- a/TravelAlbum.Web/Views/Manage/ManageLogins.cshtml
+++ b/TravelAlbum.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.ManageLoginsViewModel
+﻿@model TravelAlbum.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
