--- a/TravelAlbum.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/TravelAlbum.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.VerifyPhoneNumberViewModel
+﻿@model TravelAlbum.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
