--- a/TravelAlbum.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/TravelAlbum.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.AddPhoneNumberViewModel
+﻿@model TravelAlbum.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
