--- a/TravelAlbum.Web/Views/Manage/SetPassword.cshtml
+++ b/TravelAlbum.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelCatalog.Models.SetPasswordViewModel
+﻿@model TravelAlbum.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
