Unit of work implemented, Service class added to service layer for displaying image, model changed to work with the new image data, travel detailed view changed to display the image

--- a/TravelAlbum.Web/Views/Travels/Details.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Details.cshtml
@@ -11,3 +11,7 @@ Details
 -------------------<br />
 <br/>
 @Model.Language
+
+<br/>
+
+<img src="@String.Format("data:image/jpg;base64,{0}", Model.ImageData)" />
