--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.Label("Image", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="image" name="uploadImage" />
+                <input type="file" id="image" name="UploadedImage" />
             </div>
         </div>
 
