--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TravelAlbum.Web.Models.InputViewModels.CreateTravelInputModel
+@using TravelAlbum.Models;
 
 @using (Html.BeginForm("Add", "Travels", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -29,6 +30,12 @@
                 <input type="file" id="image" name="UploadedImage" />
             </div>
         </div>
+
+
+        @Html.DropDownList("Language",
+                    new SelectList(Enum.GetValues(typeof(Language))),
+                    "Select language",
+                    new { @class = "form-control" })
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
