Localization added with global resources dictionaries for English and Bulgarian, HttpModule added for changing the current culture depending on the uri and route config changed to handle different languages

--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Add Travel", "Add", "Travels")</li>                   
+                    <li>@Html.ActionLink(Resources.GlobalResources.LabelAddTravel, "Add", "Travels")</li>                   
                 </ul>
                 
                 @Html.Partial("_LoginPartial")
