Changing language option added with culture controller and option in the top page menu

--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,26 @@
                 
                 @Html.Partial("_LoginPartial")
             </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">                  
+                    <li>
+                        @Html.ActionLink(
+                        "Bulgarian",
+                        "RedirectLanguage",
+                        "Culture",
+                        new { language = "bg", query = Request.Url.PathAndQuery }, 
+                        null)
+                    </li>
+                    <li>
+                        @Html.ActionLink(
+                        "English",
+                        "RedirectLanguage",
+                        "Culture",
+                        new { language = "en", query = Request.Url.PathAndQuery },
+                        null)
+                    </li>  
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container body-content">
