Renaming namespaces, travel add view amended

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model TravelAlbum.Web.Models.Travels.LatestTravelsOutputModel
+﻿@model TravelAlbum.Web.Models.TravelModels.LatestTravelsOutputModel
 
 @foreach(var travel in Model.travels)
-{
+{   
     <div>Start date: @travel.StartDate</div>
 }
 
