--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -9,25 +9,69 @@
         <h4>Title</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+       
+        <div class="form-group">           
+            @Html.LabelFor(model => model.bgTitle, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.bgTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.bgTitle, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.bgDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.bgDescription, 10, 500, htmlAttributes: new { @class = "form-control col-md-8" })
+                
+               @* @Html.EditorFor(model => model.bgDescription, new { htmlAttributes = new { @class = "form-control" } })*@
+               
+                @Html.ValidationMessageFor(model => model.bgDescription, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.Label("Image", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.enTitle, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="image" name="UploadedImage" />
+                @Html.EditorFor(model => model.enTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.enTitle, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.enDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.enDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.enDescription, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            @Html.Label( Resources.GlobalResources.UploadedImage_1, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="image_1" name="UploadedImage_1" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label(Resources.GlobalResources.UploadedImage_2, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="image_2" name="UploadedImage_2" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label(Resources.GlobalResources.UploadedImage_3, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="image_3" name="UploadedImage_3" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label(Resources.GlobalResources.UploadedImage_4, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="image_4" name="UploadedImage_4" />
             </div>
         </div>
 
