Model namespaces changed in account views, add travel view change, create travel input model changed to have required attributes

--- a/TravelAlbum.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/TravelAlbum.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Models.ExternalLoginConfirmationViewModel
+﻿@model TravelAlbum.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
