--- a/TravelAlbum.Web/Views/Account/ForgotPassword.cshtml
+++ b/TravelAlbum.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Models.ForgotPasswordViewModel
+﻿@model TravelAlbum.Web.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
