--- a/TravelAlbum.Web/Views/Account/Register.cshtml
+++ b/TravelAlbum.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Models.RegisterViewModel
+﻿@model TravelAlbum.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
