--- a/TravelAlbum.Web/Views/Account/ResetPassword.cshtml
+++ b/TravelAlbum.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Models.ResetPasswordViewModel
+﻿@model TravelAlbum.Web.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
