--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -11,17 +11,17 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
        
         <div class="form-group">           
-            @Html.LabelFor(model => model.bgTitle, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.bgTitle, htmlAttributes: new { @class = "control-label  col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.bgTitle, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.bgTitle, "", new { @class = "text-danger" })
+
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.bgDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.bgDescription, 10, 500, htmlAttributes: new { @class = "form-control col-md-8" })
+                @Html.TextAreaFor(model => model.bgDescription, 10, 800, htmlAttributes: new { @class = "form-control", @style = "max-width:100%" })
                 
                @* @Html.EditorFor(model => model.bgDescription, new { htmlAttributes = new { @class = "form-control" } })*@
                
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.enDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.enDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.enDescription, 10, 800, htmlAttributes : new { @class = "form-control", @style = "max-width:100%" })
                 @Html.ValidationMessageFor(model => model.enDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -87,4 +87,8 @@
             </div>
         </div>
     </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
