--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -5,62 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/modernizr")
+   <link href="~/Content/nav-bar.css" rel="stylesheet" />
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink(Resources.GlobalResources.LabelAddTravel, "Add", "Travels")</li>                   
-                </ul>
-                
-                @Html.Partial("_LoginPartial")
-            </div>
-            <div class="navbar-collapse collapse">
-               
-                @Html.ActionLink(
+
+    <div class='topnav'>
+        @Html.ActionLink(Resources.GlobalResources.LabelAddTravel, "Add", "Travels")
+        @Html.ActionLink(
                         "Bulgarian",
                         "RedirectLanguage",
                         "Culture",
                         new { language = "bg", query = Request.Url.PathAndQuery },
                         null)
-                @Html.ActionLink(
+        @Html.ActionLink(
                         "English",
                         "RedirectLanguage",
                         "Culture",
                         new { language = "en", query = Request.Url.PathAndQuery },
                         null)
-                @*<ul class="nav navbar-nav">                  
-                    <li>
-                        @Html.ActionLink(
-                        "Bulgarian",
-                        "RedirectLanguage",
-                        "Culture",
-                        new { language = "bg", query = Request.Url.PathAndQuery }, 
-                        null)
-                    </li>
-                    <li>
-                        @Html.ActionLink(
-                        "English",
-                        "RedirectLanguage",
-                        "Culture",
-                        new { language = "en", query = Request.Url.PathAndQuery },
-                        null)
-                    </li>  
-                </ul>*@
-            </div>
-        </div>
-    </div>
+
+    </div>  
     <div class="container body-content">
         @RenderBody()
 
