navigation bar div sections for content menu and culture menu added

--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -7,8 +7,18 @@ body {
     background-color: #333;
 }
 
-    .topnav a {
+    .topnav .content-menu a {
         float: left;
+        display: block;
+        color: #f2f2f2;        
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+
+    .topnav .culture-menu a {
+        float: right;
         display: block;
         color: #f2f2f2;
         text-align: center;
