--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -3,8 +3,13 @@ body {
 }
 
 .topnav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    left: 0;
     overflow: hidden;
     background-color: #333;
+    width: 100%
 }
 
     .topnav .content-menu a {
@@ -17,7 +22,7 @@ body {
         font-size: 17px;
     }
 
-    .topnav .culture-menu a {
+    .topnav .login-menu a {
         float: right;
         display: block;
         color: #f2f2f2;
@@ -36,3 +41,7 @@ body {
             background-color: #4CAF50;
             color: white;
         }
+
+.language-images{
+    width:20px;
+}
