--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -9,7 +9,8 @@ body {
     left: 0;
     overflow: hidden;
     background-color: #333;
-    width: 100%
+    width: 100%;
+    z-index:100
 }
 
     .topnav .content-menu a {
