Single image model and service, Single Image Translational Indo model and service added, adding Single Image functionality added with controller and methods for this functionality - loading the add view and posting the result to the database

--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <div class='topnav'>
         <div class="content-menu">
             @Html.ActionLink(Resources.GlobalResources.LabelAddTravel, "Add", "Travels")
-            <a>test</a>           
+            @Html.ActionLink("Add single image", "Add", "SingleImages")     
         </div>
 
         <div class="login-menu">
