--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -1,42 +1,18 @@
-﻿@model TravelAlbum.Web.Models.TravelModels.LatestTravelsOutputModel
+﻿@model TravelAlbum.Web.Models.SingleImageModels.LatestSingleImagesOutputModel
 
-@foreach(var travel in Model.travels)
-{   
-    <div>Start date: @travel.StartDate</div>
+@if (Model != null && Model.singleImages != null)
+{
+    foreach (var singleImage in Model.singleImages)
+    {        
+        <img src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
+        <div>Start date: @singleImage.CreatodOn</div>
+        <div>@singleImage.Description</div>
+    }
 }
 
 @{
     ViewBag.Title = "Home Page";
 }
-
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>TEST!
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
 
 
 @using (Html.BeginForm("SearchTravels", "Travels", new { area = string.Empty }, FormMethod.Post))
