Index page styles amended - single images resized and centered, description resized and centered

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -4,10 +4,11 @@
 {
     foreach (var singleImage in Model.singleImages)
     {
-        <div class="single-image-container">
-            <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
-            <div>@singleImage.Description</div>
-            <div>@singleImage.CreatodOn</div>
+        <div class="single-image-container">            
+                <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
+                <div class="description">@singleImage.Description</div>
+                <div>@singleImage.CreatodOn</div>
+            
         </div>
     }
 }
