--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/nav-bar.css" rel="stylesheet" />
     <link href="~/Content/top-image.css" rel="stylesheet" />
-    <link href="~/Content/single-image.css" rel="stylesheet" />
+    <link href="~/Content/index.css" rel="stylesheet" />
 </head>
 <body>
     <div class="top-image"></div>
