Infinite scroller added to the home page to load single image records when user scroll down

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model TravelAlbum.Web.Models.SingleImageModels.LatestSingleImagesOutputModel
 
+<div id="single-images-container">
 @if (Model != null && Model.singleImages != null)
 {
     foreach (var singleImage in Model.singleImages)
@@ -7,15 +8,16 @@
         <div class="single-image-container">            
                 <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
                 <div class="description">@singleImage.Description</div>
-                <div>@singleImage.CreatodOn</div>
-            
+                <div>@singleImage.CreatodOn</div>            
         </div>
     }
 }
 
-@{
-    ViewBag.Title = "Home Page";
-}
+</div>
+<div id="progress" style="display:none">
+    <h4>Loading...</h4>
+</div>
+
 
 
 @using (Html.BeginForm("SearchTravels", "Travels", new { area = string.Empty }, FormMethod.Post))
@@ -23,3 +25,10 @@
     @Html.AntiForgeryToken();
     <input type="text" class="search_box" width:150px;" name="search" placeholder="Търси пътувания">
 }
+
+<div id="url-path">@Request.Url.PathAndQuery;</div>
+
+@section SingleImagesLoader{   
+<script src="~/Scripts/Custom/single-images-loader.js"></script>
+}
+   
