Tests for GetDataOnScroll method in HomeController added

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="single-image-container">            
                 <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
                 <div class="description">@singleImage.Description</div>
-                <div>@singleImage.CreatodOn</div>            
+                <div>@singleImage.CreatedOn</div>            
         </div>
     }
 }
