Global resources namespace renamce, contracts projects removed,

--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <div class="top-image"></div>
     <div class='topnav'>
         <div class="content-menu">
-            @Html.ActionLink(Resources.GlobalResources.LabelAddTravel, "Add", "Travels")
+            @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddTravel, "Add", "Travels")
             @Html.ActionLink("Add single image", "Add", "SingleImages")     
         </div>
 
