--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -4,12 +4,18 @@
 @if (Model != null && Model.singleImages != null)
 {
     foreach (var singleImage in Model.singleImages)
-    {
-        <div class="single-image-container">            
-                <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
-                <div class="description">@singleImage.Description</div>
-                <div>@singleImage.CreatedOn</div>            
-        </div>
+    {        
+            <div class="single-image-container">
+                <a href="@Url.Action("Details", "SingleImages", new { id = singleImage.SingleImageId })">
+                    <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
+                </a>                 
+                    <div class="description">@singleImage.Description</div>
+                    <div>@singleImage.CreatedOn</div>
+            </div>
+
+            <a href="@Url.Action("Details", "SingleImages", new { id = singleImage.SingleImageId })">
+                <div>ttt</div>
+            </a>
     }
 }
 
