CreatedOn date template added to the details SingleImage view

--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -1,12 +1,12 @@
 ﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageOutputViewModel
 
 
--------------------<br />
+<br />
 @Model.Description
 <br />
--------------------<br />
 <br />
-@Model.CreatedOn
+<br />
+@Html.DisplayFor(model => model.CreatedOn)
 
 <br />
 
