--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Travel Album</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/nav-bar.css" rel="stylesheet" />
     <link href="~/Content/top-image.css" rel="stylesheet" />
+    <link href="~/Content/lightbox.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
 </head>
 <body>
@@ -15,32 +16,31 @@
     <div class='topnav'>
         <div class="content-menu">
             @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddTravel, "Add", "Travels")
-            @Html.ActionLink("Add single image", "Add", "SingleImages")     
+            @Html.ActionLink("Add single image", "Add", "SingleImages")
         </div>
 
         <div class="login-menu">
             @Html.Partial("_LoginPartial")
             <a href="@Url.Action("RedirectLanguage", "Culture",  new { language = "bg", query = Request.Url.PathAndQuery })">
-                <img src="~/Content/Images/bg_flag.jpg" class="language-images"/>
+                <img src="~/Content/Images/bg_flag.jpg" class="language-images" />
             </a>
             <a href=@Url.Action("RedirectLanguage", "Culture",  new { language = "en", query = Request.Url.PathAndQuery })>
-                <img src="~/Content/Images/en_flag.jpg"  class="language-images"/>
+                <img src="~/Content/Images/en_flag.jpg" class="language-images" />
             </a>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-
-
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Travel catalog</p>
+            <p>&copy; @DateTime.Now.Year - Travel Album</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/lightbox.js"></script>
     @RenderSection("SingleImagesLoader", required: false)
 </body>
 </html>
