--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <div class="top-image"></div>
     <div class='topnav'>
         <div class="content-menu">
+            @Html.ActionLink("Album", "Index", "Home")
             @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddTravel, "Add", "Travels")
             @Html.ActionLink("Add single image", "Add", "SingleImages")
         </div>
