--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -2,13 +2,9 @@
 
 
 <br />
-@Model.Description
+<div class="description">@Model.Description</div>
 <br />
-<br />
-
-<br />
-@Html.DisplayFor(model => model.CreatedOn)
-
+<div class="description">@Html.DisplayFor(model => model.CreatedOn)</div>
 <br />
 <a href="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" data-lightbox="image-1">
     <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
