--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -15,9 +15,12 @@
     <div class="top-image"></div>
     <div class='topnav'>
         <div class="content-menu">
-            @Html.ActionLink("Album", "Index", "Home")
-            @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddTravel, "Add", "Travels")
-            @Html.ActionLink("Add single image", "Add", "SingleImages")
+            @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAlbum, "Index", "Home")
+            @if (ViewContext.HttpContext.User.IsInRole("Admin"))
+            {
+                @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddTravel, "Add", "Travels");
+                @Html.ActionLink(TravelAlbum.Web.App_GlobalResources.GlobalResources.LabelAddSingleImage, "Add", "SingleImages");
+            }
         </div>
 
         <div class="login-menu">
