Comments functionality added to the Single Images details page - comment model added, comment service added, comments service interface added, comments service to interface binding in ninject added, Application User model amended to has Avatar and NickName, Single Image details page changed

--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Content/top-image.css" rel="stylesheet" />
     <link href="~/Content/lightbox.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
+    <link href="~/Content/single-image-details.css" rel="stylesheet" />
 </head>
 <body>
     <div class="top-image"></div>
@@ -46,5 +47,6 @@
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/lightbox.js"></script>
     @RenderSection("SingleImagesLoader", required: false)
+    @RenderSection("CommentsSection", required: false)
 </body>
 </html>
