Comment section styles in single photo details page changed, styles extracted in separate file

--- a/TravelAlbum.Web/Views/Shared/_BatchCommentsPartial.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_BatchCommentsPartial.cshtml
@@ -5,7 +5,7 @@
     {
         if (comment.IsDeleted == false)
         {
-            <div class="row">
+            <div>
                 @{
                     @Html.Partial("_SingleCommentPartial", comment)
                 }
