--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link href="~/Content/lightbox.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
     <link href="~/Content/single-image-details.css" rel="stylesheet" />
+    <link href="~/Content/comments.css" rel="stylesheet" />
 </head>
 <body>
     <div class="top-image"></div>
