--- a/TravelAlbum.Web/Content/comments.css
+++ b/TravelAlbum.Web/Content/comments.css
@@ -37,3 +37,18 @@
     margin-left:auto;
     margin-right:auto
 }
+
+.add-comment-textarea {
+    max-width: 100%;
+    display: flex;    
+    margin-left: auto;
+    margin-right: auto
+}
+
+.submit-comment-button {
+    display: flex;
+    margin-left: 67%;
+    margin-right: auto;
+    margin-top:5px;
+    margin-bottom:5px
+}
