--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -1,17 +1,13 @@
 ﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageOutputViewModel
-
-
+<a href="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" data-lightbox="image-1">
+    <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
+</a>
 <br />
 <div class="description">@Model.Description</div>
 <br />
 <div class="description">@Html.DisplayFor(model => model.CreatedOn)</div>
 <br />
-<a href="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" data-lightbox="image-1">
-    <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
-</a>
-
-
-<div class="clear row">    
+<div class="clear row">
     <div class="col-md-4">
         @if (ViewContext.HttpContext.User.IsInRole("Admin"))
         {
@@ -20,46 +16,37 @@
     </div>
 </div>
 <div style="height:10px;clear:both;"></div>
-<div id="comments-part">
-    <div class="row">
-        <div class="col-md-offset-2 panel panel-default col-md-8 add-comment-container">
-            <textarea class="add-comment-textarea" placeholder="Add Comment" name="Content"></textarea>
-            <div>
-                <button class="submit-comment-button btn btn-primary" data-id="@Model.SingleImageId">Add comment</button>
-            </div>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
 
+<textarea class="add-comment-textarea" rows="4" cols="90" placeholder="Add Comment" name="Content"></textarea>
+<button class="submit-comment-button btn btn-primary" data-id="@Model.SingleImageId">Add comment</button>
+<div id="latest-comments-container" class="row">
 
-    <div class="clear row">
-        <div class="col-md-offset-5 col-md-3">
-            <button id="show-comments-button" class="btn btn-primary">Show Comments</button>
-            <button id="hide-comments-button" class="btn btn-danger" style="display:none">Hide Comments</button>
-            @*Html.ActionLink("Add Comment", "AddComment", "Comments", new { area = "Facilities", id = Model.Id }, new { @class = "btn btn-primary" })*@
-        </div>       
-    </div>
-
-    <div id="latest-comments-container" class="row">
-
-    </div>
-
-    <div id="comments-container" data-id="@Model.SingleImageId"></div>
-
-    @*@ @foreach (var comment in Model.FacilityComments)
-        {
-           @Html.Action("RedirectToGetLatestComments", "FacilitiesPublic", new { area = "Facilities", id = Model.Id })
-            if (comment.IsDeleted == false)
-            {
-                <div class="row">
-                    @{
-                        var commentViewModel = SportsBook.Web.Infrastructure.Mapping.AutoMapperConfig.Configuration.CreateMapper().Map<SportsBook.Web.Areas.Facilities.ViewModels.Comments.CommentViewModel>(comment);
-                        @Html.Partial("_SingleCommentPartial", commentViewModel)
-                    }
-                </div>
-            }
-        }*@
 </div>
+
+<div id="comments-container" data-id="@Model.SingleImageId"></div>
+
+<div class="clear row">
+    <div class="col-md-offset-5 col-md-3">
+        <button id="show-comments-button" class="btn btn-primary">Show Comments</button>
+        <button id="hide-comments-button" class="btn btn-danger" style="display:none">Hide Comments</button>
+        @*Html.ActionLink("Add Comment", "AddComment", "Comments", new { area = "Facilities", id = Model.Id }, new { @class = "btn btn-primary" })*@
+    </div>
+</div>
+
+@*@ @foreach (var comment in Model.FacilityComments)
+    {
+       @Html.Action("RedirectToGetLatestComments", "FacilitiesPublic", new { area = "Facilities", id = Model.Id })
+        if (comment.IsDeleted == false)
+        {
+            <div class="row">
+                @{
+                    var commentViewModel = SportsBook.Web.Infrastructure.Mapping.AutoMapperConfig.Configuration.CreateMapper().Map<SportsBook.Web.Areas.Facilities.ViewModels.Comments.CommentViewModel>(comment);
+                    @Html.Partial("_SingleCommentPartial", commentViewModel)
+                }
+            </div>
+        }
+    }*@
+
 
 @section CommentsSection{
     <script src="~/Scripts/Custom/comments-controller.js"></script>
