--- a/TravelAlbum.Web/Views/Travels/Details.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Web.Models.TravelModels.TravelViewModel
+﻿@model TravelAlbum.Web.Models.TravelModels.DetailsTravelOutputViewModel
 
 Details
 
@@ -10,8 +10,4 @@ Details
 <br />
 -------------------<br />
 <br/>
-@Model.Language
-
-<br/>
-
 <img src="@String.Format("data:image/jpg;base64,{0}", Model.ImageData)" />
