--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -23,7 +23,7 @@
 
 </div>
 
-<div id="comments-container" data-id="@Model.SingleImageId"></div>
+<div id="comments-container" data-id="@Model.SingleImageId" data-route="/SingleImages/Details/"></div>
 
 <button id="show-comments-button" class="btn btn-primary">Show Comments</button>       
         @*Html.ActionLink("Add Comment", "AddComment", "Comments", new { area = "Facilities", id = Model.Id }, new { @class = "btn btn-primary" })*@
