Database changed - TravelImage entity removed, Travel and SingleImage linked - one-to-many, hoe controller loading of images changed not to take into account the description of the image, the details image changed with additional logic for checking whether the single image has a description or not

--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -1,24 +1,23 @@
 ﻿#single-images-container {
-    clear:both
+    clear: both;
+    margin:1%
 }
 
 #progress {
     clear:both
 }
 
+/*
 .single-image {
     padding-top: 10px;
     padding-bottom: 10px
 }
-
+*/
 .single-image {
     width: 100%;
     height: 100%;
-    margin-left:auto;
-    margin-right:auto;
-    display:block
+    display:block;   
 }
-
 
 .description {
     width: 30%;
@@ -29,6 +28,6 @@
 }
 
 .single-image-container{
-    width:30%;
-    float:left
+    width:33.3%;
+    float:left    
 }
