--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/lightbox.js"></script>
+    <script src="~/Scripts/jquery.endless-scroll.js"></script>
     @RenderSection("SingleImagesLoader", required: false)
     @RenderSection("CommentsSection", required: false)
 </body>
