--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageOutputViewModel
 <a href="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" data-lightbox="image-1">
-    <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
+    <img class="single-image-img" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
 </a>
 <br />
 <div class="description">@Model.Description</div>
