--- a/TravelAlbum.Web/Views/SingleImages/Add.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Add.cshtml
@@ -28,6 +28,13 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(m => m.Mountain, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(m => m.MountainId, Model.MountainsDropDown, new { @class = "form-control", required = "required" })
+                @Html.ValidationMessageFor(model => model.MountainsDropDown, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.Label("Image", new { @class = "control-label col-md-2" })
