Styles of the single images on the album page to show on click of single image bigger size of the image is shown, seeding of the database added

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -8,7 +8,10 @@
     {        
             <div class="single-image-container">
                 <a href="@Url.Action("Details", "SingleImages", new { id = singleImage.SingleImageId })">
-                    <img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" />
+                    <div style="background: url(@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData))">
+                        @*<!--img class="single-image" src="@String.Format("data:image/jpg;base64,{0}", singleImage.SingleImageData)" /-->*@
+                        aa
+                    </div>
                 </a>                     
                     <div>@singleImage.CreatedOn</div>
             </div>            
