--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -16,7 +16,7 @@
 .single-image {
     width: 100%;
     height: 100%;
-    display:block;   
+    display: block;   
 }
 
 .description {
@@ -24,10 +24,50 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    color:red;
     word-wrap: break-word;
 }
 
-.single-image-container{
-    width:33.3%;
-    float:left    
+.single-image-container{    
+    width:33.3%;    
+    float:left;
+    position:relative
 }
+
+.cover-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 95%;
+}
+
+.left-cover {
+    background: url('Images/magnifying_glass.png');
+    background-repeat: no-repeat;    
+    background-position: center;
+    display: none;
+    float: left;
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.5
+}
+
+.right-cover {
+    display: none;
+    float: left;
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.5
+}
+
+.cover-container:hover > .left-cover {
+    display: inline-block
+}
+.cover-container:hover > .right-cover {
+    display: inline-block
+}
+
+
