--- a/TravelAlbum.Web/Content/travels.css
+++ b/TravelAlbum.Web/Content/travels.css
@@ -6,6 +6,14 @@
     clear: both;
 }
 
+#screen {
+    background-image: url('SingleImages/SL373554.JPG') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .travels-container {
 
     width: 45%;
